--- a/public/contact.html
+++ b/public/contact.html
@@ -64,9 +64,14 @@
                </nav>
             </div>
             <div class="container-fluid">
-               <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
+               <!-- <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div> -->
                <div class="menu_main">
                   <ul>
+                     <div class="logo">
+                        <a href="">
+                        <img src="images/logo.png" style="width: 300px; height: auto;">
+                        </a>
+                     </div>
                      <li class="active"><a href="index.html">Home</a></li>
                      <li><a href="about.html">About</a></li>
                      <li><a href="services.html">Services</a></li>
