--- a/public/services.html
+++ b/public/services.html
@@ -64,13 +64,16 @@
                </nav>
             </div>
             <div class="container-fluid">
-               <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
                <div class="menu_main">
                   <ul>
+                     <div class="logo">
+                        <a href="">
+                        <img src="images/logo.png" style="width: 300px; height: auto;">
+                        </a>
+                     </div>
                      <li class="active"><a href="index.html">Home</a></li>
                      <li><a href="about.html">About</a></li>
                      <li><a href="services.html">Services</a></li>
-                     <li><a href="blog.html">Blog</a></li>
                      <li><a href="contact.html">Contact us</a></li>
                   </ul>
                </div>
